# empty-blog

./: .env.example  Makefile  README.md  manage.py  pyproject.toml
auth/: forms.py  models.py  urls.py  views.py
auth/migrations/: 0001_initial.py
blog/: urls.py  views.py
empty_blog/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py
static/js/: messages.js  script.js
templates/: base.html  contacts.html  index.html  latest.html
templates/auth/: login.html  registration.html
templates/components/: list.html  messages.html  navbar.html
templates/posts/: feed.html  latest.html  list.html
templates/users/: profile.html
users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/migrations/: 0001_initial.py
